--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A new type of captcha program",
   "main": "server.js",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "request": "^2.88.0",
     "socket.io": "^2.1.1",
     "the-noun-project": "^2.1.0"
   },
