--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "mysql": "^2.16.0",
     "request": "^2.88.0",
     "socket.io": "^2.1.1",
+    "sqlite3": "^4.0.4",
     "the-noun-project": "^2.1.0"
   },
   "devDependencies": {},
