--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jimp": "^0.5.6",
+    "random-jpeg": "^0.1.4",
     "request": "^2.88.0",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.4",
