--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "request": "^2.88.0",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.4",
-    "the-noun-project": "^2.1.0"
+    "the-noun-project": "^2.1.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
