--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "geopattern": "^1.2.3",
     "jimp": "^0.5.6",
     "random-jpeg": "^0.1.4",
     "request": "^2.88.0",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.4",
     "the-noun-project": "^2.1.0",
+    "trianglify": "^1.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {},
